@@ -4866,6 +4866,13 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   <li>Relation schema export to multiple formats</li>
 </ul></li>
 
+<li>Lori Lee (Google Summer of Code 2010)
+<ul>
+  <li>User interface improvements</li>
+  <li>ENUM/SET editor</li>
+  <li>Simplified interface for export/import</li>
+</ul></li>
+
 <li>Barrie Leslie
 <ul>
   <li>BLOBstreaming support with PBMS PHP extension</li>
