@@ -104,6 +104,8 @@ $Id$
   thanks to Isaac Bennetch - ibennetch
 - patch #3038312 [export] JSON export, 
   thanks to Hauke Henningsen - blubberkeks152
+- rfe #1494550 [interface] Editor for SET/ENUM fields.
+- rfe #2649375 [interface] Simplified interface to backup/restore.
 - rfe #2973909 Users preferences
 - [relations] Dropped WYSIWYG-PDF configuration variable.
 - rfe #806035, #686260 [relations] Export relations to Dia, SVG and others
